# pointwise-derivative-estimation

./: .gitignore  README.md  pyproject.toml  run.sh
asm/: generate_data.py  kernel.py  local_smoothing.py  main.py  risk.py  utils.py  vizualize.py
configs/: loc_10_epan_ker.yml  loc_10_gauss_ker.yml  loc_10_rect_ker.yml  loc_cub_epan_ker.yml  loc_cub_gauss_ker.yml  loc_cub_rect_ker.yml  loc_lin_epan_ker.yml  loc_lin_gauss_ker.yml  loc_lin_rect_ker.yml  loc_quadr_epan_ker.yml  loc_quadr_gauss_ker.yml  loc_quadr_rect_ker.yml  project.yml
local_smooth/: kernel.py  local_smoothing.py  main.py  risk.py  vizualize.py
notebooks/: demo.ipynb
